Tue May 30 01:01:39 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * NEWS:
        
          Document changes.

        * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.cpp:
        * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.h:
        * orbsvcs/orbsvcs/Log/LogRecordStore.h:
        * orbsvcs/orbsvcs/Log/Log_i.cpp:
        
          When a log channel's LogFullActionType is wrap, the capacity
          threshold alarms "are triggered as if coupled to a gauge that
          counts from zero to the highest capacity threshold value and
          then resets to zero".
        
          The log service didn't implement such a gauge and compared the
          log channel's current size with the maximum size (as if the
          LogFullActionType was halt).  This could result in an alarm 
          being sent for each log record, as the log channel will almost
          always be "full".
        
          Changed plug-in Strategy to maintain gauge.  Added get_gauge()
          and reset_gauge().
        
          Changed log channel to compare the value of the gauge with the
          maximum size when the LogFullActionType is wrap.
        
          Fixes bugzilla #2420.
        
Mon May 29 14:28:17 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * NEWS:

          Document changes.

        * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.cpp:
        * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.h:
        * orbsvcs/orbsvcs/Log/LogRecordStore.h:
        * orbsvcs/orbsvcs/Log/Log_i.cpp:

          Changed plug-in Strategy interface.  Added get_record_attribute(),
          set_record_attribute(), and set_records_attribute(); removed
          retrieve(), update(), and remove().

          This will allow plug-in Strategies to handle these high-level
          operations more efficiently.

Mon May 29 08:05:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2542_Regression/*: